Update golangci-lint config
It seems that there have been some changes to golangci-lint over the last
couple of years. Update config to make it pass again.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,6 +1,8 @@
 run:
   deadline: 5m
-  skip-dirs:
+
+issues:
+  exclude-dirs:
     - hooks
     - scripts
 
@@ -11,14 +13,12 @@ linters:
    - goconst
    - gocyclo
    - goimports
-   - golint
    - gosec
+   - govet
    - ineffassign
-   - maligned
    - misspell
-   - structcheck
+   - revive
    - unconvert
    - unparam
-   - varcheck
-   - vet
-   - vetshadow
+   - unused
+
