--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -35,5 +35,5 @@ jobs:
 
       - name: check spelling
         run: |
-          go install github.com/client9/misspell/cmd/misspell
+          go get github.com/client9/misspell/cmd/misspell
           $(go env GOPATH)/bin/misspell -error src *.md
